src/objects/FieloAlpha__Transaction__c.object
<CustomObject>
    <description>[Points] Actions that generate points performed by members.</description>
    <fields>
        <fullName>FieloAlpha__Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Action</description>
        <label>Action</label>
        <referenceTo>FieloAlpha__Action__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Adjust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Read only field.</inlineHelpText>
        <label>Adjust Transaction</label>
        <referenceTo>FieloAlpha__Transaction__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__ApprovedReadOnly__c</fullName>
        <formula>IF(  FieloAlpha__Approved__c , $Label.FieloAlpha__Approved , $Label.FieloAlpha__NotApproved )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In case of approval process behind transactions, here is the approval</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__AttachmentId__c</fullName>
        <label>Image source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__BranchCode__c</fullName>
        <description>Branch where transaction was done</description>
        <label>Branch Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Branch where transaction was done</description>
        <inlineHelpText>Look up the branch where the transaction took place.</inlineHelpText>
        <label>Branch</label>
        <referenceTo>FieloAlpha__Branch__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__CodeItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Code Item</label>
        <referenceTo>FieloAlpha__Code__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Code__c</fullName>
        <label>Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Cost__c</fullName>
        <description>Cost related to each point</description>
        <formula>IF(ISNULL(FieloAlpha__PointCost__c), FieloAlpha__Points__c * FieloAlpha__Member__r.FieloAlpha__Program__r.FieloAlpha__PointCost__c, FieloAlpha__Points__c * FieloAlpha__PointCost__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__DateReadOnly__c</fullName>
        <formula>FieloAlpha__Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date &amp; Time (Read Only)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Date__c</fullName>
        <defaultValue>now()</defaultValue>
        <description>Date and time when transaction was done</description>
        <inlineHelpText>Enter date and time of this transaction.</inlineHelpText>
        <label>Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>FieloAlpha__Event__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__IdentificationType__c</fullName>
        <description>Identification of the member entered in the transaction</description>
        <label>Identification Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passport</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Location__c</fullName>
        <label>Location</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__MemberCode__c</fullName>
        <description>Id of the member that made the transaction</description>
        <label>Identification Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__MemberReadOnly__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + FieloAlpha__Member__c ,  FieloAlpha__Member__r.FieloAlpha__Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Member related with the transaction</description>
        <inlineHelpText>Enter the member who performed this transaction.</inlineHelpText>
        <label>Member</label>
        <referenceTo>FieloAlpha__Member__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Offline__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box for the transaction to be processed offline.</inlineHelpText>
        <label>Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__PointCost__c</fullName>
        <description>The value of a point in real life currency.</description>
        <inlineHelpText>Enter actual cost, in the  currency of your choice, of a point in your program.</inlineHelpText>
        <label>Point Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__PointsReadOnly__c</fullName>
        <formula>FieloAlpha__Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points (Read Only)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Points__c</fullName>
        <description>It&apos;s a result to calculate rules for this transaction</description>
        <inlineHelpText>Enter the number of points produced by this transaction.</inlineHelpText>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__ProcessedStatusReadOnly__c</fullName>
        <formula>IF(  FieloAlpha__Processed__c ,  $Label.FieloAlpha__Processed ,  $Label.FieloAlpha__NotProcessed )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Processed Status (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicates whether the transaction was or not processed (read only field).</description>
        <inlineHelpText>Read only field.</inlineHelpText>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>On case of a referral transaction, here is the link to the referred.</description>
        <label>Referral</label>
        <referenceTo>FieloAlpha__Member__c</referenceTo>
        <relationshipLabel>Transactions (Referral)</relationshipLabel>
        <relationshipName>TransactionsFromReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Revenue__c</fullName>
        <description>Value earned for the transaction, is the value - Cost, and it has to be positive</description>
        <formula>FieloAlpha__Value__c - FieloAlpha__Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Reverted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Reward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reward</label>
        <referenceTo>FieloAlpha__Reward__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__SkipEngine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Engine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__StatusReadOnly__c</fullName>
        <formula>TEXT(FieloAlpha__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unapproved Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error in the Approval Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transaction without Member</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__TransactionId__c</fullName>
        <description>Link to transaction identificator</description>
        <inlineHelpText>You may assign a code to identify this transaction</inlineHelpText>
        <label>Transaction Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Type__c</fullName>
        <description>These values represents different kind of transactions, each one have their own rules and gives quantity of points depending on their configuration</description>
        <inlineHelpText>Pick the type of transaction.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Adjust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expiration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Referral - Step 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral - Step 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The value of the purchase originating this transaction.</description>
        <inlineHelpText>Enter the purchase value.</inlineHelpText>
        <label>Purchase Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>FieloAlpha__All_Transactions</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__Type__c</columns>
        <columns>FieloAlpha__Value__c</columns>
        <columns>FieloAlpha__MemberReadOnly__c</columns>
        <columns>FieloAlpha__DateReadOnly__c</columns>
        <columns>FieloAlpha__ApprovedReadOnly__c</columns>
        <columns>FieloAlpha__ProcessedStatusReadOnly__c</columns>
        <columns>FieloAlpha__StatusReadOnly__c</columns>
        <columns>FieloAlpha__PointsReadOnly__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Transactions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloAlpha__ByTypeCodeInsert</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__Processed__c</columns>
        <columns>FieloAlpha__Member__c</columns>
        <columns>FieloAlpha__IdentificationType__c</columns>
        <columns>FieloAlpha__MemberCode__c</columns>
        <columns>FieloAlpha__Value__c</columns>
        <columns>FieloAlpha__Points__c</columns>
        <columns>FieloAlpha__Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloAlpha__Type__c</field>
            <operation>equals</operation>
            <value>Code Insert</value>
        </filters>
        <label>By Type Code Insert</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloAlpha__ByTypePurchase</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__Processed__c</columns>
        <columns>FieloAlpha__Member__c</columns>
        <columns>FieloAlpha__IdentificationType__c</columns>
        <columns>FieloAlpha__MemberCode__c</columns>
        <columns>FieloAlpha__Value__c</columns>
        <columns>FieloAlpha__Points__c</columns>
        <columns>FieloAlpha__Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloAlpha__Type__c</field>
            <operation>equals</operation>
            <value>Purchase</value>
        </filters>
        <label>By Type Purchase</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloAlpha__ByTypeReferralCompleteSignup</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__Processed__c</columns>
        <columns>FieloAlpha__Member__c</columns>
        <columns>FieloAlpha__IdentificationType__c</columns>
        <columns>FieloAlpha__MemberCode__c</columns>
        <columns>FieloAlpha__Value__c</columns>
        <columns>FieloAlpha__Points__c</columns>
        <columns>FieloAlpha__Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloAlpha__Type__c</field>
            <operation>equals</operation>
            <value>Referral - Step 2</value>
        </filters>
        <label>By Type Referral - Complete Signup</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloAlpha__ByTypeReferralSimpleSignup</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__Processed__c</columns>
        <columns>FieloAlpha__Member__c</columns>
        <columns>FieloAlpha__IdentificationType__c</columns>
        <columns>FieloAlpha__MemberCode__c</columns>
        <columns>FieloAlpha__Value__c</columns>
        <columns>FieloAlpha__Points__c</columns>
        <columns>FieloAlpha__Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloAlpha__Type__c</field>
            <operation>equals</operation>
            <value>Referral - Step 1</value>
        </filters>
        <label>By Type Referral - Simple Signup</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloAlpha__ByTypeRegistration</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__Processed__c</columns>
        <columns>FieloAlpha__Member__c</columns>
        <columns>FieloAlpha__IdentificationType__c</columns>
        <columns>FieloAlpha__MemberCode__c</columns>
        <columns>FieloAlpha__Value__c</columns>
        <columns>FieloAlpha__Points__c</columns>
        <columns>FieloAlpha__Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloAlpha__Type__c</field>
            <operation>equals</operation>
            <value>Registration</value>
        </filters>
        <label>By Type Registration</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloAlpha__ThisWeek</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__Processed__c</columns>
        <columns>FieloAlpha__Member__c</columns>
        <columns>FieloAlpha__IdentificationType__c</columns>
        <columns>FieloAlpha__MemberCode__c</columns>
        <columns>FieloAlpha__Value__c</columns>
        <columns>FieloAlpha__Points__c</columns>
        <columns>FieloAlpha__Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>This Week</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>FieloAlpha__ValidateDateTime</fullName>
        <active>true</active>
        <description>The Date &amp; Time for the Transaction must have a value</description>
        <errorConditionFormula>ISNULL(FieloAlpha__Date__c)</errorConditionFormula>
        <errorDisplayField>FieloAlpha__Date__c</errorDisplayField>
        <errorMessage>The Date &amp; Time for the Transaction must have a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__ValidateProcessedPoints</fullName>
        <active>true</active>
        <description>A processed Transaction can not have null points.</description>
        <errorConditionFormula>FieloAlpha__Processed__c &amp;&amp; ISNULL(FieloAlpha__Points__c)</errorConditionFormula>
        <errorDisplayField>FieloAlpha__Points__c</errorDisplayField>
        <errorMessage>A processed Transaction can not have null points</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__ValidateTransactionType</fullName>
        <active>true</active>
        <errorConditionFormula>FieloAlpha__Value__c != 0 &amp;&amp; ( ISPICKVAL(FieloAlpha__Type__c, &apos;Code Insert&apos; ) || ISPICKVAL(FieloAlpha__Type__c, &apos;Referral - Step 1&apos; ) || ISPICKVAL(FieloAlpha__Type__c, &apos;Referral - Step 2&apos; ) || ISPICKVAL(FieloAlpha__Type__c, &apos;Registration&apos; ) )</errorConditionFormula>
        <errorMessage>You must enter &quot;Purchase value = 0&quot; for transactions of types: Registration, Code insert, Referral - Simple signup, and Referral - Complete signup.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__ValidateTransactionValue</fullName>
        <active>false</active>
        <errorConditionFormula>FieloAlpha__Value__c &lt;= 0 &amp;&amp; ISPICKVAL(FieloAlpha__Type__c, &apos;Purchase&apos; )</errorConditionFormula>
        <errorDisplayField>FieloAlpha__Value__c</errorDisplayField>
        <errorMessage>Value cannot be equal or less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__Validate_Member</fullName>
        <active>true</active>
        <errorConditionFormula>(FieloAlpha__Member__c == null)</errorConditionFormula>
        <errorDisplayField>FieloAlpha__Member__c</errorDisplayField>
        <errorMessage>You must choose a Member in the Member Field.</errorMessage>
    </validationRules>
</CustomObject>